Se agrega ruta para archivos estaticos

--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./static/chat.css" />
     <title>Gobusters Chat Application</title>
   </head>
   <body>
     <h1>Gobusters Chat Application</h1>
+    <div class="chat-container">
+      <p class="message">asdasdadasdasdasd</p>
+      <p class="message">hola 2</p>
+    </div>
   </body>
+  <script src="./static/chat.js"></script>
 </html>
