--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <title>Login & Signup</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./static/ghostbusters-png-logo-3616.png" type="image/png" />
+    <title>Gobusters</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -97,7 +95,9 @@
                       placeholder="Enter password"
                     />
                   </div>
-                  <button type="submit" class="btn btn-primary">Iniciar sesión</button>
+                  <button type="submit" class="btn btn-primary">
+                    Iniciar sesión
+                  </button>
                 </form>
               </div>
 
